--- a/WebStandard/css/style.css
+++ b/WebStandard/css/style.css
@@ -6,14 +6,14 @@
 #skip a:active, #skip a:focus {top: 0;}
 
 /* 레이아웃 */
-#wrap {width: 100%;}
-#header {width: 100%; height: 325px; background: url(../img/header_bg.jpg)center top repeat-x;}
-#contents {width: 100%; height: 800px; background: #222;}
-#footer {width: 100%; height: 200px; background: #333;}
+#wrap {}
+#header {height: 325px; background: url(../img/header_bg.jpg)center top repeat-x;}
+#contents {}
+#footer {height: 200px; background: #333;}
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {width: 100%; height: 200px; background: #333;}
-#cont_tit {width: 100%; height: 200px; background: #444;}
+#cont_nav {background-color: #f6fdff;}
+#cont_tit {background-color: #EAF7FD;}
 #cont_ban {width: 100%; height: 200px; background: #555;}
 #cont_cont {width: 100%; height: 200px; background: #666;}
 
@@ -39,3 +39,19 @@
 .header .header-icon a.icon2:hover {background-position: -60px -60px;}
 .header .header-icon a.icon3:hover {background-position: -60px -120px;}
 .header .header-icon a.icon4:hover {background-position: -60px -180px;}
+
+/* 전체 메뉴 */
+.nav {overflow: hidden; padding: 30px 0px; }
+.nav > div {float: left; width: 40%;}
+.nav > div:last-child {width: 20%;} /* ie9부터 사용 가능 */
+.nav > div.last {width: 20%;}
+.nav > div h3 {font-size: 18px; color: #25a2d0; margin-bottom: 4px;}
+.nav > div ol {overflow: hidden;}
+.nav > div ol li {float: left; width: 50%;}
+.nav > div.last ol li {width: 100%;}
+.nav > div ol li a:hover {text-decoration: underline;}
+
+/* 타이틀 */
+.tit {position: relative;}
+.tit h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #2c94c4; font-family: 'Gugi', cursive;}
+.tit .btn {position: absolute; top: 5px; right: 0; width: 60px; height: 60px; background: url(../img/icon.png) no-repeat 0 -600px;}
