--- a/WebStandard/css/style.css
+++ b/WebStandard/css/style.css
@@ -44,7 +44,7 @@
 .nav {overflow: hidden; padding: 30px 0px; }
 .nav > div {float: left; width: 40%;}
 .nav > div:last-child {width: 20%;} /* ie9부터 사용 가능 */
-.nav > div.last {width: 20%;}
+.nav > div.last {width: 20%;} /* ie8 아래도 사용 가능 */
 .nav > div h3 {font-size: 18px; color: #25a2d0; margin-bottom: 4px;}
 .nav > div ol {overflow: hidden;}
 .nav > div ol li {float: left; width: 50%;}
@@ -122,3 +122,26 @@
 .notice3 li a strong {display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice3 li a span {display: block; font-size: 12px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice3 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+/* 마우스 오버효과1 */
+.notice_hover h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice_hover ul {overflow: hidden;}
+.notice_hover ul li {float: left; width: 93px; margin-right: 5px; text-align: center;}
+.notice_hover ul li:last-child {margin-right: 0px;} /* ie9부터 사용 가능 */
+.notice_hover ul li.last {margin-right: 0px;} /* ie8아래도 사용 가능 */
+.notice_hover ul li a span {position: relative; display: block; width: 93px; height: 93px; line-height: 93px;}
+.notice_hover ul li a span img {width: 100%;}
+.notice_hover ul li a span em {visibility: hidden; position: absolute; left:0; top: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 100%;}
+.notice_hover ul li a span:hover em {visibility: visible;}
+.notice_hover ul li a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
+
+/* 마우스 오버효과2 */
+.notice_hover2 ul {overflow: hidden;}
+.notice_hover2 ul li {float: left; width: 93px; margin-right: 5px; text-align: center;}
+.notice_hover2 ul li:last-child {margin-right: 0px;} /* ie9부터 사용 가능 */
+.notice_hover2 ul li.last {margin-right: 0px;} /* ie8아래도 사용 가능 */
+.notice_hover2 ul li a span {position: relative; display: block; width: 93px; height: 93px;}
+.notice_hover2 ul li a span img {width: 100%;}
+.notice_hover2 ul li a span em {visibility: hidden; position: absolute; left:0; bottom: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 20%;}
+.notice_hover2 ul li a span:hover em {visibility: visible;}
+.notice_hover2 ul li a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
