--- a/WebStandard/css/style.css
+++ b/WebStandard/css/style.css
@@ -145,3 +145,24 @@
 .notice_hover2 ul li a span em {visibility: hidden; position: absolute; left:0; bottom: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 20%;}
 .notice_hover2 ul li a span:hover em {visibility: visible;}
 .notice_hover2 ul li a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
+
+/* 탭 메뉴 */
+.tab_menu {position: relative; border: 1px solid #ccc; padding: 8px; height: 105px;}
+.tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+.tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px; margin-bottom: -1px;}
+.tab_menu ul li a {padding: 5px 10px; display: block;}
+.tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
+.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active ul li a {color: #333;}
+
+/* 게시판4 */
+.notice4 {position: relative; border: 1px solid #ccc;}
+.notice4 h4 {padding: 8px 10px; border-bottom: 1px solid #ccc; font-size: 14px; font-weight: 700; scolor: #0093bd;}
+.notice4 h4 em {color: #cf3292;}
+.notice4 ul {padding: 10px;}
+.notice4 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px;}
+.notice4 li a {float: left; width: 65%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice4 li span {float: right; text-align: right; width: 30%;}
+.notice4 a.more {position: absolute; top: 9px; right: 9px;}
