--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -2,19 +2,60 @@
 #header {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 컨테이너 : 가운데 오게 작업 */
-.container {width: 1200px; margin: 0 auto; background: rgba(0,0,0,0.3);}
+.container {width: 1200px; margin: 0 auto;}
 
 /* 헤더 */
 .header {height: 327px;}
 .header .header_menu {text-align: right;}
 .header .header_menu a {color: #fff; padding: 8px 0 6px 10px; display: inline-block; transition: color 0.3s ease; font-family: 'Abel', sans-serif;}
 .header .header_menu a:hover {color: #ccc;}
+
 .header .header_title {text-align: center; text-transform: uppercase; margin-top: 50px; font-family: 'Abel', sans-serif;}
 .header .header_title h1 {color: #fff; font-size: 30px; background: #51b0dc; display: inline-block; padding: 5px 30px; letter-spacing: 2px; font-weight: 900; transition: box-shadow 0.25s ease-in-out;}
 .header .header_title h1:hover {box-shadow: inset -9em 0 0 0 #257fac, inset 9em 0 0 0 #257fac;}
 .header .header_title a {color: #fff; font-size: 16px; background: #4a9abf; margin-top: -7px; padding: 10px 20px; transition: box-shadow 0.25s ;}
 .header .header_title a:hover {box-shadow: inset 0 0 0 5px rgba(75,154,191,0.9), inset 0 0 0 100px rgba(0,0,0,0.1)}
 
+.header .header_icon {text-align: center; margin-top: 60px; padding-bottom: 45px;}
+.header .header_icon li {display: inline; margin: 0 2px;}
+.header .header_icon li a {
+    position: relative;
+    background-color: #3192bf;
+    border-radius: 50%;
+    width: 60px; height: 60px; color: #fff;
+    display: inline-block;
+    font-size: 35px;
+    line-height: 55px;
+    transition: all 0.3s ease;
+}
+.header .header_icon li a span {
+    opacity: 0;
+    position: absolute;
+    left: 50%; top: -40%;
+    transform: translateX(-50%);
+    font-size: 12px;
+    line-height: 1.6;
+    background: #3192bf;
+    padding: 3px 9px;
+    border-right: 6px 0px;
+}
+.header .header_icon li a span:before {
+    content: '';
+    position: absolute;
+    left: 50%; bottom: -5px;
+    border-top: 5px solid #3192bf;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
+.header .header_icon li a:hover span {
+    opacity: 1;
+    top: -33px;
+}
+.header .header_icon li a:hover {
+    box-shadow:
+        0 0 0 3px rgba(75,154,191,0.9) inset,
+        0 0 0 100px rgba(0,0,0,0.1) inset;
+}
 
 /* media query*/
 @media (max-width: 1220px){ /* 0~1220px */
