--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -57,6 +57,34 @@
         0 0 0 100px rgba(0,0,0,0.1) inset;
 }
 
+/* 전체 메뉴 */
+.nav {overflow: hidden; padding: 25px 0;}
+.nav > div {float: left; width: 40%;}
+.nav > div:last-child {width: 20%;}
+.nav > div h3 {font-size: 18px; color: #25a2d0; font-weight: bold; margin-bottom: 4px;}
+.nav > div ol {overflow: hidden;}
+.nav > div li {float: left; width: 50%; position: relative; padding-left: 8px; box-sizing: border-box;}
+.nav > div:last-child li {width: 100%;}
+.nav > div li:before {
+    content: '';
+    width: 3px; height: 3px;
+    background-color: #25a2d0;
+    border-radius: 50%;
+    position: absolute; left: 0; top: 6px;
+}
+.nav > div li a {position: relative;}
+.nav > div li a:after {
+    content: '';
+    display: inline-block;
+    width: 0; height: 1px;
+    background: #25aad0;
+    transition: all 0.3s ease-out;
+    position: absolute; bottom:0; left:0;
+}
+.nav > div li:hover a:after {width: 100%;}
+
+
+
 /* media query*/
 @media (max-width: 1220px){ /* 0~1220px */
     .container {width: 100%;}
