17 헤더 반응형

--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -1,5 +1,6 @@
 /* 레이아웃 */
-#header {background: url(../img/header_bg.jpg) repeat-x center top;}
+body {background: url(../img/header_bg.jpg) repeat-x center top;}
+#header {}
 #nav {background-color: #f6fdff;}
 #title {background-color: #eaf7fd;}
 
@@ -60,7 +61,7 @@
 }
 
 /* 전체 메뉴 */
-.nav {overflow: hidden; padding: 25px 0;}
+.nav {overflow: hidden; padding: 25px 0; display: none;}
 .nav > div {float: left; width: 40%;}
 .nav > div:last-child {width: 20%;}
 .nav > div h3 {font-size: 18px; color: #25a2d0; font-weight: bold; margin-bottom: 4px;}
@@ -108,4 +109,37 @@
 @media (max-width: 1220px){ /* 0~1220px */
     .container {width: 100%;}
     .row {padding: 0 15px;}
+    .title .btn {right: 5px;}
+}
+
+@media (max-width: 1024px){ /* 0~1024px */
+
+}
+
+@media (max-width: 960px){ /* 0~960px */
+    .nav > div {float: none; width: 100%;}
+    .nav > div:last-child {width: 100%;}
+    .nav > div li {width: 33.3333%;}
+    .nav > div:last-child li {width: 33.3333%;}
+    .nav > div ol {margin-bottom: 10px;}
+}
+
+@media (max-width: 768px){ /* 0~768px */
+
+}
+
+@media (max-width: 600px){ /* 0~600px */
+    .header {height: auto;}
+    .header .header_title {display: none;}
+    .header .header_icon {display: none;}
+    .title .btn {display: none;}
+    .nav > div li {width: 50%;}
+}
+
+@media (max-width: 480px){ /* 0~480px */
+
+}
+
+@media (max-width: 320px){ /* 0~320px */
+    .nav > div li {width: 100%;}
 }
