19 컨텐츠 타이틀

--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -120,6 +120,12 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 컨텐츠 영역 */
 .column {padding: 15px; border-bottom: 1px solid #dbdbdb;}
+.column .col_tit {font-size: 20px; color: #2f7fa6; padding-bottom: 5px;}
+.column .col_desc {
+    border-bottom: 1px dashed #dbdbdb; 
+    padding-bottom: 15px; margin-bottom: 15px; 
+    color: #878787; line-height: 18px;
+}
 .column.col1 {}
 .column.col2 {}
 .column.col3 {border-bottom: 0px;}
@@ -154,7 +160,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 @media (max-width: 768px){ /* 0~768px */
     #cont_left {float: none; width: 100%;}
-    #cont_center {border-right: 0;}
+    #cont_center {border-left: 0;}
 }
 
 @media (max-width: 600px){ /* 0~600px */
