22-23 게시판 (한줄표과 & 두줄효과)

--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -136,6 +136,72 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 .column.col8 {}
 .column.col9 {border-bottom: 0px;}
 
+/* 메뉴 */
+.menu {}
+.menu li {position: relative;}
+.menu li a {
+    font-size: 16px; text-transform: uppercase;
+    color: #878787;
+    border-bottom: 1px solid #dbdbdb;
+    padding: 10px; display: block;
+    transition: box-shadow 0.34s ease, background 0.34s ease;
+}
+.menu li a i {
+    position: absolute; right: 10px; top: 15px;
+}
+.menu li a:hover {
+    box-shadow: inset 180px 0 0 0 rgba(36,130,174,0.7);
+    color: #fff;
+    background: rgba(36,130,174,0.9);
+}
+
+/* 게시판 1 */
+.notice1 {position: relative;}
+.notice1 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice1 li {position: relative; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-left: 8px;}
+.notice1 li:before {
+    content: '';
+    width: 3px; height: 3px;
+    border-radius: 50%;
+    background: #449ce2;
+    position: absolute; left: 0; top: 6px;
+}
+.notice1 .more {
+    position: absolute; right: 0; top: 3px;
+    color: #878787;
+    text-transform: uppercase;
+    font-size: 10px;    
+}
+
+/* 게시판 2 */
+.notice2 {position: relative;}
+.notice2 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice2 li {
+    position: relative; 
+    overflow: hidden; text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    padding-left: 8px;
+    padding-bottom: 5px;
+    max-height: 35px; /* ie */
+}
+.notice2 li:before {
+    content: '';
+    width: 3px; height: 3px;
+    border-radius: 50%;
+    background: #449ce2;
+    position: absolute; left: 0; top: 6px;
+}
+.notice2 .more {
+    position: absolute; right: 0; top: 3px;
+    color: #878787;
+    text-transform: uppercase;
+    font-size: 10px;    
+}
+
+
+
 /* media query*/
 @media (max-width: 1220px){ /* 0~1220px */
     .container {width: 100%;}
@@ -167,8 +233,22 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     .header {height: auto;}
     .header .header_title {display: none;}
     .header .header_icon {display: none;}
+    
     .title .btn {display: none;}
+    
     .nav > div li {width: 50%;}
+    
+    .column.col1 .col_tit {display: none;}
+    .column.col1 .col_desc {display: none;}
+    .column.col1 .menu li a i {display: none;}
+    .column.col1 {padding: 0; border-bottom: 0;}
+    .column.col1 .menu ul {overflow: hidden;}
+    .column.col1 .menu li {float: left; width: 33.3333%; border-right: 1px solid #dbdbdb; text-align: center; box-sizing: border-box;}
+    .column.col1 .menu li:nth-child(3n) {border-right: 0;}
+    .column.col1 .menu li a {color: #fff; text-shadow: 0 0 5px rgba(0,0,0,0.7)}
+    .column.col1 .menu li a:hover {box-shadow: none; background: rgba(36,130,174,0.3s);}
+    .column.col2 {background: #fff;}
+    .column.col4 {border-top: 1px solid #dbdbdb;}
 }
 
 @media (max-width: 480px){ /* 0~480px */
