24 블로그 영역(고해상도 이미지1)

--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -200,6 +200,16 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     font-size: 10px;    
 }
 
+/* 블로그1 */
+.blog1 img {width: 100%;}
+.blog1 .img-retina {display: none;}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+        only screen and (min-device-pixel-ratio: 1.5),
+        only screen and (min-resolution: 1.5dppx) {
+            .blog1 .img-retina {display: initial;}
+            .blog1 .img-normal {display: none;}
+}
+
 
 
 /* media query*/
