31 사이드 컨텐츠

--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -328,12 +328,18 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 @media (max-width: 960px){ /* 0~960px */
     #cont_center {margin-right: 0; border-right: 0;}
-    #cont_right {position: static; width: 100%; border-top: 1px solid #dbdbdb;}
+    #cont_right {position: static; width: 100%;}
     .nav > div {float: none; width: 100%;}
     .nav > div:last-child {width: 100%;}
     .nav > div li {width: 33.3333%;}
     .nav > div:last-child li {width: 33.3333%;}
     .nav > div ol {margin-bottom: 10px;}
+    
+    #cont_right {overflow: hidden;}
+    #cont_right .column {float: left; width: 33.3333%; box-sizing: border-box;}
+    #cont_right .column.col7 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
+    #cont_right .column.col8 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
+    #cont_right .column.col9 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
 }
 
 @media (max-width: 768px){ /* 0~768px */
@@ -363,6 +369,10 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     .column.col2 {background: #fff;}
     .column.col4 {border-top: 1px solid #dbdbdb;}
     
+    #cont_right .column {width: 50%;}
+    #cont_right .column.col8 {border-right: 0;}
+    #cont_right .column.col9 {display: none;}
+    
     .slider figcaption {padding: 10px;}
     .slider figcaption em {font-size: 18px;}
     .slider figcaption span {font-size: 14px;}
@@ -378,6 +388,10 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 @media (max-width: 320px){ /* 0~320px */
     .nav > div li {width: 100%;}
+    
+    #cont_right .column {width: 50%;}
+    #cont_right .column.col7 {border-right: 0; border-bottom: 1px solid #dbdbdb;}
+    
     
     .square a {width: 100%; margin-right: 0; margin-left: 0;}
 }
