--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -310,13 +310,13 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 .video iframe {position: absolute; width: 100%; height: 100%;}
 
 /* 푸터 */
-#footer {padding: 25px 0; text-align: center;}
-#footer ul {margin-bottom: 20px;}
-#footer li {position: relative; display: inline; padding: 0 7px 0 10px;}
-#footer li:before {content: ''; width: 1px; height: 12px; background: #ccc; position: absolute; left: 0; top: 2px;}
-#footer li:first-child:before {width: 0; height: 0;}
-#footer .w3c {margin-top: 15px;}
-#footer .w3c img {width: auto;}
+.footer {padding: 25px 0; text-align: center;}
+.footer ul {margin-bottom: 20px;}
+.footer li {position: relative; display: inline; padding: 0 7px 0 10px;}
+.footer li:before {content: ''; width: 1px; height: 12px; background: #ccc; position: absolute; left: 0; top: 2px;}
+.footer li:first-child:before {width: 0; height: 0;}
+.footer .w3c {margin-top: 15px;}
+.footer .w3c img {width: auto;}
 
 
 
