--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -1,14 +1,30 @@
 @charset "utf-8";
 
 /* 레이아웃 */
-#header {width: 100%; height: 63px; border-bottom: 1px solid #c6c6c6;}
+#mNav {display: none; position: absolute; top: 10px; right: 14px;}
+#header {width: 100%; border-bottom: 1px solid #c6c6c6;}
 #banner {position: relative;}
+
 
 /* 가운데 영역 */
 .container {position: relative; width: 1280px; margin: 0 auto;}
 
 /* 로우 영역 */
-.row {padding: 0 24px;}
+.row {padding: 0 28px;}
+
+/* 모바일 메뉴 */
+.ham {display: block; width: 25px; height: 10px; padding: 15px 10px 10px 10px;} /* 손가락 터치하는 영역 크기 지정 */
+.ham span {position: relative; display: block; width: 25px; height: 4px; background: #39106a;}
+.ham span:before {
+    content: '';
+    width: 25px; height: 4px; background: #39106a;
+    position: absolute; left: 0; bottom: -7px;
+}
+.ham span:after {
+    content: '';
+    width: 25px; height: 4px; background: #39106a;
+    position: absolute; left: 0; top: -7px;
+}
 
 /* 헤더 뎡역 */
 .header {}
@@ -46,3 +62,37 @@
 .banner-menu li.line:after {content: ''; width: 1px; height: 14px; background: #fff; position: absolute; right: -2px; top: 2px;}
 
 .banner-slider {}
+
+
+
+
+/* 미디어 쿼리 */
+@media (max-width: 1290px) {
+    .container {width: 100%;} /* 스크롤바가 생기지 않게 반응형에서 무조건 */
+    .header .nav li {width: 93px;}
+    .header .nav li a {font-size: 15px; padding: 17px 10px;}
+    .header h1 em {padding: 11px 8px 5px 0;}
+    .header h1 strong {top: 19px;}
+}
+@media (max-width: 1024px) {
+    #mNav {display: block;}
+    .nav {display: none;}
+    .row {padding: 0 24px;}
+    .header h1 {float: none; text-align: center;}
+    .header h1 strong {left: 24px;}
+}
+@media (max-width: 960px) {
+    
+}
+@media (max-width: 768px) {
+    #mNav {right: 6px;}
+    .row {padding: 0 16px;}
+    .header h1 {text-align: left;}
+    .header h1 strong {display: none;}
+}
+@media (max-width: 480px) {
+    
+}
+@media (max-width: 360px) {
+    
+}
