--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -40,7 +40,7 @@
 .header .nav li a {display: block; padding: 19px 10px; font-size: 17px; font-weight: 700; color: #444;}
 
 /* 배너 영역 */
-.banner-menu {overflow: hidden; position: absolute; left: 0; top: 20px; width: 100%; height: 100px;}
+.banner-menu {overflow: hidden; position: absolute; left: 0; top: 20px; width: 100%; height: 100px; z-index: 10;}
 .banner-menu a {color: #fff; font-size: 16px; transition: all 0.3s;}
 .banner-menu a:hover {color: #c1c1c1;}
 .banner-menu .bm_left ul {padding-top: 7px;}
@@ -61,7 +61,11 @@
 .banner-menu li.line > a {margin-right: 20px;}
 .banner-menu li.line:after {content: ''; width: 1px; height: 14px; background: #fff; position: absolute; right: -2px; top: 2px;}
 
-.banner-slider {}
+/* 슬라이드 */
+.banner-slider {width: 100%; height: 600px;}
+.banner-slider .ss1 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.banner-slider .ss2 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.banner-slider .ss3 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
 
 
 
