--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -66,7 +66,10 @@
 .banner-slider .ss1 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
 .banner-slider .ss2 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
 .banner-slider .ss3 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
-
+.banner-slider .swiper-slide h3 {font-size: 62px; display: inline-block; line-height: 70px; color: #fff; margin-top: 200px; position: relative;}
+.banner-slider .swiper-slide h3 em {display: block; font-size: 59px; font-weight: 100;}
+.banner-slider .swiper-slide h3:after {content: ''; width: 100%; height: 1px; background: rgba(255,255,255,0.3); position: absolute; left: 0; bottom: -35px;}
+.banner-slider .swiper-slide p {font-size: 27px; color: #fff; padding-top: 45px;}
 
 
 
@@ -77,6 +80,7 @@
     .header .nav li a {font-size: 15px; padding: 17px 10px;}
     .header h1 em {padding: 11px 8px 5px 0;}
     .header h1 strong {top: 19px;}
+    .swiper-button-prev, .swiper-button-next {display: none;}
 }
 @media (max-width: 1024px) {
     #mNav {display: block;}
@@ -84,8 +88,15 @@
     .row {padding: 0 24px;}
     .header h1 {float: none; text-align: center;}
     .header h1 strong {left: 24px;}
+    .banner-menu .bm_left ul {display: none;}
+    .banner-menu .bm_right ul:first-child {display: none;}
 }
 @media (max-width: 960px) {
+    .banner-slider {height: 500px;}
+    .banner-slider .swiper-slide h3 {margin-top: 170px; font-size: 37px; line-height: 45px;}
+    .banner-slider .swiper-slide h3 em {font-size: 34px;}
+    .banner-slider .swiper-slide h3:after {bottom: -15px;}
+    .banner-slider .swiper-slide p {font-size: 16px; padding-top: 35px;}
     
 }
 @media (max-width: 768px) {
@@ -93,6 +104,17 @@
     .row {padding: 0 16px;}
     .header h1 {text-align: left;}
     .header h1 strong {display: none;}
+}
+@media (max-width: 600px) {
+    .banner-slider {height: 400px;}
+    .banner-slider .swiper-slide h3 {margin-top: 140px; font-size: 24px; line-height: 30px;}
+    .banner-slider .swiper-slide h3 em {font-size: 20px;}
+    .banner-slider .swiper-slide h3:after {bottom: 5px;}
+    .banner-slider .swiper-slide p {font-size: 14px; padding-top: 25px;}
+    .banner-menu {top: 16px;}
+    .banner-menu .bm_right li.white a {font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
+    .banner-menu .bm_right li.purple a {font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
+    .swiper-pagination-bullet {width: 13px !important; height: 13px !important;}
 }
 @media (max-width: 480px) {
     
