--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -4,6 +4,7 @@
 #mNav {display: none; position: absolute; top: 10px; right: 14px;}
 #header {width: 100%; border-bottom: 1px solid #c6c6c6;}
 #banner {position: relative;}
+#movie {}
 
 
 /* 가운데 영역 */
@@ -70,6 +71,36 @@
 .banner-slider .swiper-slide h3 em {display: block; font-size: 59px; font-weight: 100;}
 .banner-slider .swiper-slide h3:after {content: ''; width: 100%; height: 1px; background: rgba(255,255,255,0.3); position: absolute; left: 0; bottom: -35px;}
 .banner-slider .swiper-slide p {font-size: 27px; color: #fff; padding-top: 45px;}
+
+/* 무비 */
+.movie {padding: 100px 0;}
+.movie_title {margin-bottom: 60px;}
+.movie_title ul {overflow: hidden; width: 848px; margin: 0 auto;}
+.movie_title li {float: left; width: 210px; text-align: center; border: 1px solid #c4c4c4; margin-right: -1px;}
+.movie_title li a {display: block; padding: 15px 0; font-size: 18px; color: #666; font-weight: 700;}
+.movie_title li.active a {background: #666; color: #fff;}
+.movie_chart {height: 592px;}
+.movie_chart > div {}
+.movie_chart > div > div {display: inline-block; width: 292px; height: 592px; margin-right: 15px;}
+.movie_chart > div > div:last-child {margin-right: 0;}
+.movie_chart > div > div .poster {position: relative;}
+.movie_chart > div > div .poster img {display: block;}
+.movie_chart > div > div .poster .rank {position: absolute; top: 17px; left: 0; width: 50px; height: 50px; line-height: 50px; background: #38116a; text-align: center;}
+.movie_chart > div > div .poster .rank strong {color: #fff;}
+.movie_chart > div > div .poster .mx {position: absolute; top: 17px; right: 17px;}
+.movie_chart > div > div .poster .mx span {width: 103px; height: 25px; display: block;}
+.movie_chart > div > div .poster .mx .m {background-position: 0 -75px;}
+.movie_chart > div > div .poster .mx .b {background-position: 0 -100px;}
+.movie_chart > div > div .infor {background: #fff; padding: 17px; border: 1px solid #c4c4c4;}
+.movie_chart > div > div .infor h3 {color: #333; font-size: 30px; font-weight: 700; margin-bottom: 20px;}
+.movie_chart > div > div .infor h3 span {width: 29px; height: 29px; display: inline-block; margin-top: 9px; vertical-align: -2px;}
+.movie_chart > div > div .infor h3 span.all {background-position: -87px -125px;}
+.movie_chart > div > div .infor h3 span.a12 {background-position: -58px -125px;}
+.movie_chart > div > div .infor h3 span.a15 {background-position: 0px -125px;}
+.movie_chart > div > div .infor h3 span.a19 {background-position: -29px -125px;}
+.movie_chart > div > div .infor h3 strong {}
+.movie_chart > div > div .infor .infor_btn a {display: inline-block; background: #f2f2f2; font-size: 18px; padding: 15px 30px;}
+
 
 
 
