--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -64,9 +64,9 @@
 
 /* 슬라이드 */
 .banner-slider {width: 100%; height: 600px;}
-.banner-slider .ss1 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
-.banner-slider .ss2 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
-.banner-slider .ss3 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.banner-slider .ss1 {background: url(../img/main_slider01_2000.jpg) no-repeat center center; background-size: cover;}
+.banner-slider .ss2 {background: url(../img/main_slider02_2000.jpg) no-repeat center center; background-size: cover;}
+.banner-slider .ss3 {background: url(../img/main_slider03_2000.jpg) no-repeat center center; background-size: cover;}
 .banner-slider .swiper-slide h3 {font-size: 62px; display: inline-block; line-height: 70px; color: #fff; margin-top: 200px; position: relative;}
 .banner-slider .swiper-slide h3 em {display: block; font-size: 59px; font-weight: 100;}
 .banner-slider .swiper-slide h3:after {content: ''; width: 100%; height: 1px; background: rgba(255,255,255,0.3); position: absolute; left: 0; bottom: -35px;}
