--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -2,7 +2,7 @@
 
 /* 레이아웃 */
 #mNav {display: none; position: absolute; top: 10px; right: 14px;}
-#header {width: 100%; border-bottom: 1px solid #c6c6c6;}
+#header {width: 100%; border-bottom: 1px solid #c6c6c6; background: #fff;}
 #banner {position: relative;}
 #movie {}
 
@@ -79,8 +79,8 @@
 .movie_title li {float: left; width: 210px; text-align: center; border: 1px solid #c4c4c4; margin-right: -1px;}
 .movie_title li a {display: block; padding: 15px 0; font-size: 18px; color: #666; font-weight: 700;}
 .movie_title li.active a {background: #666; color: #fff;}
-.movie_chart {height: 592px; overflow: hidden;}
-.movie_chart > div > div > div {display: inline-block; width: 292px; height: 592px; margin-right: 15px;}
+.movie_chart {overflow: hidden;}
+.movie_chart > div > div > div {display: inline-block; width: 292px; margin-right: 15px;}
 .movie_chart > div > div > div:last-child {margin-right: 0;}
 .movie_chart > div > div > div .poster {position: relative;}
 .movie_chart > div > div > div .poster img {display: block;}
@@ -91,14 +91,14 @@
 .movie_chart > div > div > div .poster .mx .m {background-position: 0 -75px;}
 .movie_chart > div > div > div .poster .mx .b {background-position: 0 -100px;}
 .movie_chart > div > div > div .infor {background: #fff; padding: 17px; border: 1px solid #c4c4c4;}
-.movie_chart > div > div > div .infor h3 {color: #333; font-size: 30px; font-weight: 700; margin-bottom: 20px;}
+.movie_chart > div > div > div .infor h3 {color: #333; font-size: 30px; font-weight: 700; margin-bottom: 20px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .movie_chart > div > div > div .infor h3 span {width: 29px; height: 29px; display: inline-block; margin-top: 9px; vertical-align: -2px;}
 .movie_chart > div > div > div .infor h3 span.all {background-position: -87px -125px;}
 .movie_chart > div > div > div .infor h3 span.a12 {background-position: 0px -125px;}
 .movie_chart > div > div > div .infor h3 span.a15 {background-position: -29px -125px;}
 .movie_chart > div > div > div .infor h3 span.a19 {background-position: -58px -125px;}
 .movie_chart > div > div > div .infor .infor_btn {overflow: hidden;}
-.movie_chart > div > div > div .infor .infor_btn a {float: left; width: 49%; margin-right: 2%; background: #f2f2f2; font-size: 18px; text-align: center; padding: 15px; box-sizing: border-box;}
+.movie_chart > div > div > div .infor .infor_btn a {float: left; width: 49%; margin-right: 2%; background: #f2f2f2; font-size: 18px; text-align: center; padding: 15px 0; box-sizing: border-box;}
 .movie_chart > div > div > div .infor .infor_btn a:last-child {margin-right: 0;}
 
 
@@ -127,13 +127,27 @@
     .banner-slider .swiper-slide h3 em {font-size: 34px;}
     .banner-slider .swiper-slide h3:after {bottom: -15px;}
     .banner-slider .swiper-slide p {font-size: 16px; padding-top: 35px;}
-    
+    .movie_title ul {width: auto;}
+    .movie_title li {width: 25%; box-sizing: border-box;}
 }
 @media (max-width: 768px) {
+    body {background: #d9d7e0;}
     #mNav {right: 6px;}
     .row {padding: 0 16px;}
     .header h1 {text-align: left;}
     .header h1 strong {display: none;}
+    
+    #movie .row {background: #fff; margin: 24px; padding: 24px;}
+    #movie .ir_so {position: static; width: auto; height: auto; line-height: normal; text-indent: 0; font-size: 24px; font-weight: bold; padding-bottom: 20px;}
+    .movie {padding: 0;}
+    .movie_title {margin-bottom: 30px;}
+    .movie_title ul {position: relative; padding-bottom: 10px;}
+    .movie_title ul:before {content: ''; position: absolute; z-index: 1; left: 0; bottom: 0; width: 100%; height: 2px; background: #e1e1e1;}
+    .movie_title li {width: auto; border: 0;}
+    .movie_title li a {font-size: 18px; color: #666; font-weight: 400; padding: 0; margin-right: 35px;}
+    .movie_title li.active a {background: none; color: #666; position: relative;}
+    .movie_title li.active a:before {content: ''; position: absolute; z-index: 2; left: 0; bottom: -10px; width: 100%; height: 5px; background: #666;}
+    .movie_chart {}
 }
 @media (max-width: 600px) {
     .banner-slider {height: 400px;}
@@ -145,10 +159,27 @@
     .banner-menu .bm_right li.white a {font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
     .banner-menu .bm_right li.purple a {font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
     .swiper-pagination-bullet {width: 13px !important; height: 13px !important;}
+    
+    #movie .container {}
+    #movie .container:after {content: ''; position: absolute; z-index: 20; top: 0; right: 0; width: 8px; height: 100%; background: #d9d7e0;}
+    #movie .row {position: relative; margin: 8px; padding: 16px; margin-right: 0; padding-right: 0;}
+    #movie .row:after {content: ''; position: absolute; top: 0; right: 0; z-index: 10; width: 24px; height: 100%; background: #fff;}
+    #movie .ir_so {font-size: 18px; padding-bottom: 10px;}
+    .movie_title {margin-bottom: 20px;}
+    .movie_title ul {padding-bottom: 8px; white-space: nowrap; overflow-x: auto;}
+    .movie_title li a {font-size: 14px; margin-right: 15px;}
+    .movie_title li.active a:before {bottom: -8px;}
+    .movie_chart {position: relative; z-index: 30;}
+    .movie_chart > div > div > div .infor h3 {padding: 5px;}
+    .movie_chart > div > div > div .infor h3 {text-align: center; margin: 5px 0 10px;}
+    .movie_chart > div > div > div .infor h3 strong {display: block; font-size: 19px; color: #222; font-weight: 300;}
+    .movie_chart > div > div > div .infor h3 span {display: none;}
+    .movie_chart > div > div > div .infor .infor_btn a {width: 52%; margin: 0 0 5px 24%; display: block; padding: 5px; color: #777; box-sizing: border-box; font-size: 14px; background: none; border: 1px solid #ddd;}
+    .movie_chart > div > div > div .infor .infor_btn a:last-child {display: none;}
 }
 @media (max-width: 480px) {
     
 }
 @media (max-width: 360px) {
-    
+    .movie_title li a {margin-right: 7px;}
 }
