--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -4,6 +4,7 @@
 #mNav {display: none; position: absolute; top: 10px; right: 14px;}
 #header {width: 100%; border-bottom: 1px solid #c6c6c6; background: #fff;}
 #banner {position: relative;}
+#movie {background: #f8f8f8;}
 #movie {}
 
 
@@ -101,6 +102,16 @@
 .movie_chart > div > div > div .infor .infor_btn a {float: left; width: 49%; margin-right: 2%; background: #f2f2f2; font-size: 18px; text-align: center; padding: 15px 0; box-sizing: border-box;}
 .movie_chart > div > div > div .infor .infor_btn a:last-child {margin-right: 0;}
 
+/* 이벤트 */
+.event {overflow: hidden; padding: 100px 0;}
+.event img {display: block;}
+.event h2 {font-size: 30px; font-weight: 500; margin-bottom: 20px;}
+.event_left {float: left; width: 66%; margin-right: 2%;}
+.event_left .event_box1 {float: left; width: 50%;}
+.event_left .event_box2 {float: left; width: 50%;}
+.event_right {float: left; width: 32%;}
+
+
 
 
 /* 미디어 쿼리 */
@@ -137,6 +148,7 @@
     .header h1 {text-align: left;}
     .header h1 strong {display: none;}
     
+    #movie {background: none;}
     #movie .row {background: #fff; margin: 24px; padding: 24px;}
     #movie .ir_so {position: static; width: auto; height: auto; line-height: normal; text-indent: 0; font-size: 24px; font-weight: bold; padding-bottom: 20px;}
     .movie {padding: 0;}
@@ -147,7 +159,13 @@
     .movie_title li a {font-size: 18px; color: #666; font-weight: 400; padding: 0; margin-right: 35px;}
     .movie_title li.active a {background: none; color: #666; position: relative;}
     .movie_title li.active a:before {content: ''; position: absolute; z-index: 2; left: 0; bottom: -10px; width: 100%; height: 5px; background: #666;}
-    .movie_chart {}
+    
+    #event .row {background: #fff; margin: 24px; padding: 24px;}
+    .event {padding: 0;}
+    .event h2 {font-size: 24px; font-weight: bold; padding-bottom: 20px; padding: 0;}
+    .event_left {width: 100%;}
+    .event_right {display: none;}
+    
 }
 @media (max-width: 600px) {
     .banner-slider {height: 400px;}
@@ -176,6 +194,9 @@
     .movie_chart > div > div > div .infor h3 span {display: none;}
     .movie_chart > div > div > div .infor .infor_btn a {width: 52%; margin: 0 0 5px 24%; display: block; padding: 5px; color: #777; box-sizing: border-box; font-size: 14px; background: none; border: 1px solid #ddd;}
     .movie_chart > div > div > div .infor .infor_btn a:last-child {display: none;}
+    
+    #event .row {margin: 8px; padding: 16px;}
+    .event h2 {font-size: 18px;}
 }
 @media (max-width: 480px) {
     
