--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -126,6 +126,14 @@ background-size: 100%;}
 .opening .open_box > div p em {display: block;}
 .opening .open_box > div p strong {display: block; font-weight: 600;}
 
+/* 새로운 영회 */
+.new {padding: 100px 0; position: relative;}
+.new h2 {font-size: 30px; font-weight: 500; margin-bottom: 20px;}
+.new .new_left {position: relative; margin-right: 423px; height: 500px; background: #ccc url(../img/new01.jpg) center top; background-size: cover;}
+.new .new_left .play {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 120px; height: 120px;}
+.new .new_left .play .st0 {fill: #fff; opacity: 0.3}
+.new .new_left .play .st1 {fill: #fff;}
+.new .new_right {width: 400px; height: 500px; background: #f0f0f0; position: absolute; right: 0; top: 165px;}
 
 
 
