--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -155,7 +155,26 @@ background-size: 100%;}
 .new .new_right .btn .white {margin-right: 2%; background-color: #fff; color: #3a0e6a; border: 1px solid #3a0e6a;}
 .new .new_right .btn .purple {background-color: #3a0e6a; color: #fff; border: 1px solid #6e40c4;}
 
+/* 헬프 */
+.help {overflow: hidden; padding-bottom: 200px;}
+.help article {float: left; width: 32%; margin-right: 2%;}
+.help article > div {border: 1px solid #dbdbdb; height: 350px;}
+.help article.help_box3 {margin: 0;}
+.help article h3 {font-size: 30px; font-weight: 500; margin-bottom: 20px;}
 
+/* 헬프 - 공지사항 */
+.notice {position: relative; padding: 17px;}
+.notice ul {overflow: hidden;}
+.notice li {float: left; text-align: center; margin-right: -1px;}
+.notice li a {border: 1px solid #dbdbdb; font-size: 15px; color: #666; display: block; width: 80px; padding: 10px 20px; background: #f5f5f5;}
+.notice li.active a {background: #fff;}
+.notice li ul {position: absolute; left: 17px; top: 70px; width: 90%;}
+.notice li li {width: 100%; box-sizing: border-box; text-align: left; padding: 17px; border-bottom: 1px solid #dbdbdb;}
+.notice li li:last-child {border-bottom: 0;}
+.notice li li dt .bar {position: relative; padding-right: 14px;}
+.notice li li dt .bar:after {content: ''; position: absolute; right: 4px; top: 5px; width: 1px; height: 10px; background: #999;}
+.notice li li dt em {color: #999;}
+.notice li li dd {color: #777; padding-top: 3px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 
 
 
