--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -160,6 +160,7 @@ background-size: 100%;}
 .help article {float: left; width: 32%; margin-right: 2%;}
 .help article > div {border: 1px solid #dbdbdb; height: 350px;}
 .help article.help_box3 {margin: 0;}
+.help article.help_box3 > div {border: 0;}
 .help article h3 {font-size: 30px; font-weight: 500; margin-bottom: 20px;}
 
 /* 헬프 - 공지사항 */
@@ -184,6 +185,15 @@ background-size: 100%;}
 .card li span img {width: 105px;}
 .card li strong {display: block; font-size: 18px; padding-left: 120px; color: #777;}
 .card li em {display: block; font-size: 14px; padding-left: 120px; color: #777; font-weight: 300;}
+
+/* 헬프 - 고객센터/SVG */
+.service ul {overflow: hidden;}
+.service li {float: left; width: 50%; height: 193px; box-sizing: border-box; border: 1px solid #d7d7d7; text-align: center;}
+.service li a span {display: block; width: 120px; height: 120px; margin: 20px auto 0 auto; overflow: hidden;}
+.service li a strong {color: #666; font-size: 18px; font-weight: 500;}
+.service li:nth-child(1) {border-right: 0; border-bottom: 0;}
+.service li:nth-child(2) {border-bottom: 0;}
+.service li:nth-child(3) {border-right: 0;}
 
 
 
