--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -7,7 +7,9 @@
 #movie {background: #f8f8f8;}
 #event {}
 #opening {margin: 17px 0; background: url(../img/bg01.jpg) no-repeat center top; background-size: cover;}
-
+#new {}
+#help {}
+#footer {background: #211f1f;}
 
 /* 가운데 영역 */
 .container {position: relative; width: 1280px; margin: 0 auto;}
@@ -194,6 +196,33 @@ background-size: 100%;}
 .service li:nth-child(2) {border-bottom: 0;}
 .service li:nth-child(3) {border-right: 0;}
 
+/* 푸터 */
+.footer_sns {position: absolute; right: 17px; top: 33px; z-index: 1;}
+.footer_sns li {display: inline-block; margin: 0 2px;}
+.footer_sns li a {display: block; width: 36px; height: 36px;}
+.footer_sns li.s1 {background-position: 0 -375px;}
+.footer_sns li.s2 {background-position: -36px -375px;}
+.footer_sns li.s3 {background-position: -72px -375px;}
+.footer_sns li.s4 {background-position: -108px -375px;}
+.footer_sns li.s5 {background-position: -144px -375px;}
+.footer_sns li.s1:hover {background-position: 0 -411px;}
+.footer_sns li.s2:hover {background-position: -36px -411px;}
+.footer_sns li.s3:hover {background-position: -72px -411px;}
+.footer_sns li.s4:hover {background-position: -108px -411px;}
+.footer_sns li.s5:hover {background-position: -144px -411px;}
+.footer_sns .tel {text-align: right; padding-top: 5px;}
+.footer_sns .tel a {color: #8f8f8f; font-size: 21px;}
+.footer_sns .tel a em {color: #fff;}
+.footer_infor {padding: 50px 0; width: 80%;}
+.footer_infor h2 img {width: 150px;}
+.footer_infor ul {padding: 15px 0;}
+.footer_infor li {display: inline; padding-right: 16px; white-space: nowrap; position: relative;}
+.footer_infor li:after {position: absolute; content: ''; right: 5px; top: 5px; width: 1px; height: 11px; background: #8f8f8f;}
+.footer_infor li a {color: #8f8f8f;}
+.footer_infor address p {color: #8f8f8f;}
+
+
+
 
 
 /* 미디어 쿼리 */
@@ -237,6 +266,10 @@ background-size: 100%;}
     
     .new .new_left {margin-right: 0; height: 400px;}
     .new .new_right {position: relative; top: 0; width: 100%; height: auto;}
+    
+    .footer_sns {position: static; text-align: center; background: #352c2c; padding-bottom: 15px;}
+    .footer_sns .tel {display: none;}
+    .footer_infor {width: 100%; text-align: center;}
 }
 @media (max-width: 768px) {
     body {background: #d9d7e0;}
@@ -276,7 +309,7 @@ background-size: 100%;}
     .help article h3 {font-size: 24px; font-weight: bold; padding-bottom: 20px; padding: 0;}
     .help article.help_box1 {width: 100%; background: #fff; margin-right: 0; margin-top: 24px;}
     .help article.help_box2 {width: 100%; background: #fff; margin-top: 24px;}
-    .help article.help_box3 {width: 100%; background: #fff; margin-top: 24px;}
+    .help article.help_box3 {width: 100%; background: #fff; margin: 24px 0;}
     .help article.help_box3 h3 {display: none;}
     .service li {border: 0;}
     .service li:nth-child(1) {border: 0;}
