--- a/MegaBox/css/style.css
+++ b/MegaBox/css/style.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+/* 스킵 메뉴 */
+#skip {position: relative;}
+#skip a {position: absolute; left: 0; top: -40px; width: 140px; border: 1px solid #fff; color: #fff; text-align: center; background: #333;}
+#skip a:active, #skip a:focus {top: 0;}
+
 /* 레이아웃 */
 #mNav {display: none; position: absolute; top: 10px; right: 14px;}
 #header {width: 100%; border-bottom: 1px solid #c6c6c6; background: #fff;}
