--- a/ResponsiveWeb/css/style.css
+++ b/ResponsiveWeb/css/style.css
@@ -1,8 +1,11 @@
+/* 웹폰트 */
+@font-face {font-family: 'Bazzi'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/Bazzi.woff') format('woff'); font-weight: normal; font-style: normal;}
+
 /* 레이아웃 */
 body {background: url(../img/header_bg.jpg) repeat-x center top;}
 #header {}
 #nav {background-color: #f6fdff;}
-#title {background-color: #eaf7fd;}
+#title {background-color: #f6ebfc;}
 #contents {}
 #contents .container {
     border-right: 1px solid #dbdbdb;
@@ -28,18 +31,18 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 .header .header_menu a:hover {color: #ccc;}
 
 .header .header_title {text-align: center; text-transform: uppercase; margin-top: 50px; font-family: 'Abel', sans-serif;}
-.header .header_title h1 {color: #fff; font-size: 30px; background: #51b0dc; display: inline-block; padding: 5px 30px; letter-spacing: 2px; font-weight: 900; transition: box-shadow 0.25s ease-in-out;}
+.header .header_title h1 {color: #fff; font-family: 'Teko', sans-serif; font-size: 50px; background: #9235c9; display: inline-block; padding: 0 30px; letter-spacing: 2px; font-weight: 900; transition: box-shadow 0.25s ease-in-out;}
 .header .header_title h1:hover {box-shadow: inset -9em 0 0 0 #257fac, inset 9em 0 0 0 #257fac;}
-.header .header_title a {color: #fff; font-size: 16px; background: #4a9abf; margin-top: -7px; padding: 10px 20px; transition: box-shadow 0.25s ;}
+.header .header_title a {color: #fff; font-family: 'Teko', sans-serif; font-size: 20px; background: #a452d4; margin-top: -7px; padding: 5px 20px; transition: box-shadow 0.25s ;}
 .header .header_title a:hover {box-shadow: inset 0 0 0 5px rgba(75,154,191,0.9), inset 0 0 0 100px rgba(0,0,0,0.1)}
 
 .header .header_icon {text-align: center; margin-top: 60px; padding-bottom: 45px;}
 .header .header_icon li {display: inline; margin: 0 2px;}
 .header .header_icon li a {
     position: relative;
-    background-color: #3192bf;
+    background-color: #8529bc;
     border-radius: 50%;
-    width: 60px; height: 60px; color: #fff;
+    width: 55px; height: 55px; color: #fff;
     display: inline-block;
     font-size: 35px;
     line-height: 55px;
@@ -52,15 +55,15 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     transform: translateX(-50%);
     font-size: 12px;
     line-height: 1.6;
-    background: #3192bf;
+    background: #8529bc;
     padding: 3px 9px;
     border-right: 6px 0px;
 }
 .header .header_icon li a span:before {
     content: '';
     position: absolute;
-    left: 50%; bottom: -5px;
-    border-top: 5px solid #3192bf;
+    left: 40%; bottom: -5px;
+    border-top: 5px solid #8529bc;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
 }
@@ -70,7 +73,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 .header .header_icon li a:hover {
     box-shadow:
-        0 0 0 3px rgba(75,154,191,0.9) inset,
+        0 0 0 3px rgba(194,117,239,0.9) inset,
         0 0 0 100px rgba(0,0,0,0.1) inset;
 }
 
@@ -78,7 +81,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 .nav {overflow: hidden; padding: 25px 0; display: none;}
 .nav > div {float: left; width: 40%;}
 .nav > div:last-child {width: 20%;}
-.nav > div h3 {font-size: 18px; color: #25a2d0; font-weight: bold; margin-bottom: 4px;}
+.nav > div h3 {font-size: 18px; color: #a452d4; font-weight: bold; margin-bottom: 4px;}
 .nav > div ol {overflow: hidden;}
 .nav > div li {float: left; width: 50%; position: relative; padding-left: 8px; box-sizing: border-box;}
 .nav > div:last-child li {width: 100%;}
@@ -102,12 +105,12 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 타이틀 */
 .title {position: relative; text-align: center;}
-.title h2 {font-family: 'Nanum Brush Script', cursive; font-size: 39px; color: #0093bd; padding: 5px 0;}
+.title h2 {font-family: 'Bazzi'; font-size: 39px; color: #9a4bc8; padding: 5px 0;}
 .title .btn {
     position: absolute; right: 0; top: 5px;
     width: 60px; height: 60px;
     line-height: 60px;
-    background: #3192bf; color: #fff;
+    background: #8529bc; color: #fff;
     font-size: 35px;
     border-radius: 50%;
     transition: all 0.3s ease;
@@ -120,7 +123,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 컨텐츠 영역 */
 .column {padding: 15px; border-bottom: 1px solid #dbdbdb;}
-.column .col_tit {font-size: 20px; color: #2f7fa6; padding-bottom: 5px;}
+.column .col_tit {font-size: 20px; color: #9a4bc8; padding-bottom: 5px;}
 .column .col_desc {
     border-bottom: 1px dashed #dbdbdb; 
     padding-bottom: 15px; margin-bottom: 15px; 
@@ -157,7 +160,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 게시판 1 */
 .notice1 {position: relative;}
-.notice1 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice1 h5 {font-size: 14px; color: #9a4bc8; padding-bottom: 5px;}
 .notice1 li {position: relative; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-left: 8px;}
 .notice1 li:before {
     content: '';
@@ -175,7 +178,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 
 /* 게시판 2 */
 .notice2 {position: relative;}
-.notice2 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+.notice2 h5 {font-size: 14px; color: #9a4bc8; padding-bottom: 5px;}
 .notice2 li {
     position: relative; 
     overflow: hidden; text-overflow: ellipsis;
@@ -258,10 +261,10 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
     font-size: 0; line-height: 0;
     display: block; width: 15px; height: 15px;
     cursor: pointer;
-    background: #3dbfeb;
+    background: #a452d4;
     border-radius: 50%;
 }
-.slider .slick-dots li.slick-active button {background: #2b91c8;}
+.slider .slick-dots li.slick-active button {background: #9235c9;}
 .slider .slick-prev {
     position: absolute; left: 0; bottom: 0; z-index: 1000;
     width: 30px; height: 30px; background: #fff;
@@ -271,7 +274,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 .slider .slick-prev::before {
     content: "\f053";
-    color: #5dbfeb;
+    color: #a452d4;
     text-indent: 0;
     position: absolute; left: 9px; top: 8px;
 }
@@ -284,7 +287,7 @@ body {background: url(../img/header_bg.jpg) repeat-x center top;}
 }
 .slider .slick-next::before {
     content: "\f054";
-    color: #5dbfeb;
+    color: #a452d4;
     text-indent: 0;
     position: absolute; left: 11px; top: 8px;
 }
